# otimizacao

./: .gitignore  01 tableau teste problema YouTube.ipynb  02 tableau fase 1 a organizar.ipynb  03 tableau fase 1 FLP detetores.ipynb  03 tableau fase 1 LP detetores.ipynb  LICENSE  README.md  main.py  main_otimizador.py  pyproject.toml
exemplos/: exemplo_chem_eng.py  exemplo_compras.py  exemplo_livro_Gut.py  exemplo_vazio.py  exemplo_youtube.py
src/: __init__.py  otimizacao.py  otimizador.py
src/core/: _algoritmo_simplex.py  _parser.py  algoritmo_simplex.py
src/otimizacao/: __init__.py  exemplo_Simplex.py  otimizador.py  teste.ipynb
src/otimizacao.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/otimizacao/core/: algoritmo_simplex.py  determinador_fase.py  parser.py  teste.ipynb
