[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "otimizacao"
version = "0.1.0"
description = "Biblioteca de otimizacao de facil uso e didatica em PT-BR"
readme = "README.md"
requires-python = ">=3.10"

authors = [
  { name = "Emilio Fernando Montenegro Alvarado", email = "chem.montenegro.eq@gmail.com" }
]

dependencies = []

license = { text = "AGPL-3.0-only" }

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]